Fixing home page spacing

--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -8,6 +8,8 @@
   /* display: grid;
   grid-template-columns: 1fr 1fr; */
   display: flex;
+  justify-content: center;
+  align-content: center;
 }
 
 .mainText {
